--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -4,27 +4,53 @@
     <div class="header-inner">
         <!-- LOGO -->
         <div class="logo">
-            <img src="https://br-analytics.ru/app/ba_front/img/ba_outer/logos/logo-dark_bg.svg" alt="logo">
-        </div>
-        <span class="title"></span>
-
-        {% block search_input %}{% endblock %}
-        <div id="book-search-input" role="search">
-            <input type="text" placeholder="Type to search" />
+            <a href="https://br-analytics.ru" target="_blank">
+                <img src="https://br-analytics.ru/app/ba_front/img/ba_outer/logos/logo-dark_bg.svg" alt="logo">
+            </a>
         </div>
 
         <!-- Nav -->
-        <ul class="header-nav">
-            {% for nav in book.themeHqbook.nav -%}
-            <li>
-                <a href="{{nav.url}}" target="{{ nav.target}}">{{ nav.name }}</a>
-            </li>
-            {%- endfor %}
-        </ul>
+
+        <div class="header-nav-wrapper">
+            <ul class="header-nav">
+                {% for nav in book.themeHqbook.nav -%}
+                <li>
+                    <a href="{{nav.url}}" target="{{ nav.target}}">{{ nav.name }}</a>
+                </li>
+                {%- endfor %}
+            </ul>
+        </div>
+        <a href="https://br-analytics.ru/summary/" class="header-nav-back">
+            <svg xmlns="http://www.w3.org/2000/svg" width="6" height="12" viewBox="0 0 6 12">
+                <g fill="none" fill-rule="evenodd">
+                    <g fill="#FFF" fill-rule="nonzero">
+                        <g>
+                            <path d="M5.3 0L6 0.727 1.4 5.5 6 10.273 5.3 11 0 5.501z" transform="translate(-901 -29) translate(901 29.646)"/>
+                        </g>
+                    </g>
+                </g>
+            </svg>
+            <span>вернуться в аккаунт</span>
+        </a>
+
+        {% block search_input %}{% endblock %}
+        <div id="book-search-input" role="search">
+            <button type="button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
+                    <g fill="none" fill-rule="evenodd">
+                        <g fill="#FFF" fill-rule="nonzero">
+                            <g>
+                                <path d="M19.672 18.095l-5.674-5.673c2.439-3.265 1.941-7.86-1.14-10.527-3.082-2.667-7.7-2.5-10.582.381-2.881 2.882-3.048 7.5-.38 10.582 2.666 3.081 7.26 3.579 10.526 1.14l5.673 5.674c.209.21.492.328.788.328.296 0 .58-.118.789-.328.21-.209.328-.493.328-.789 0-.296-.118-.58-.328-.788zM2.23 7.781c0-3.066 2.485-5.551 5.551-5.551 3.066 0 5.551 2.485 5.551 5.551 0 3.066-2.485 5.551-5.55 5.551-1.473 0-2.885-.585-3.926-1.626-1.041-1.04-1.626-2.453-1.626-3.925z" transform="translate(-1135 -24) translate(1135 24)"/>
+                            </g>
+                        </g>
+                    </g>
+                </svg>
+            </button>
+            <input type="text" placeholder="поиск"/>
+        </div>
     </div>
 
     <div class="book-summary">
-        <!--<div class="book-summary-title">文档目录</div>-->
         {% block book_sidebar %}
         {% block book_summary %}
         <nav role="navigation">
@@ -35,18 +61,10 @@
     </div>
 
     <!-- Content nav -->
-    <div class="book-anchor">
-        <!--<div class="book-anchor-title">在这篇文章中:</div>-->
-        <div class="book-anchor-body">
-
-        </div>
-    </div>
-
     <div class="book-body">
         {% block book_body %}
         <div class="body-inner">
             {% block book_inner %}
-            {% include "website/header.html" %}
 
             <div class="page-wrapper" tabindex="-1" role="main">
                 <div class="page-inner">
@@ -60,31 +78,56 @@
                 </div>
             </div>
             {% endblock %}
+
+
+            <div class="pages-navigation">
+                {% block book_navigation %}
+                {% if page.previous and page.previous.path %}
+
+                <div
+                        class="navigation navigation-prev {% if not (page.next and page.next.path) %}navigation-unique{% endif %}"
+                        aria-label="Previous page: {{ page.previous.title }}">
+                    <div class="navigation-topic">пред Тема</div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="10" viewBox="0 0 24 10">
+                        <g fill="none" fill-rule="evenodd">
+                            <g fill="#979CA9" fill-rule="nonzero">
+                                <g>
+                                    <path d="M23.145 4.552L18.815.224c-.297-.299-.78-.299-1.064 0-.298.298-.298.78 0 1.064l3.052 3.052H1.153C.74 4.34.4 4.68.4 5.092c0 .411.34.752.752.752h19.636l-3.037 3.052c-.298.298-.298.78 0 1.064.142.142.34.227.54.227.198 0 .383-.07.539-.227l4.343-4.343c.142-.142.227-.34.227-.54-.028-.184-.114-.383-.255-.525z" transform="translate(-360 -3206) translate(360 3205.906) matrix(-1 0 0 1 23.8 0)"/>
+                                </g>
+                            </g>
+                        </g>
+                    </svg>
+                    <a href="{{ page.previous.path|resolveFile }}{{ page.previous.anchor }}">{{ page.previous.title }}</a>
+                </div>
+                {% endif %}
+                {% if page.next and page.next.path %}
+
+                <div class="navigation navigation-next {% if not (page.previous and page.previous.path) %}navigation-unique{% endif %}"
+                     aria-label="Next page: {{ page.next.title }}">
+                    <div class="navigation-topic">Тема</div>
+                    <a href="{{ page.next.path|resolveFile }}{{ page.next.anchor }}">{{ page.next.title }}</a>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="10" viewBox="0 0 24 10">
+                        <g fill="none" fill-rule="evenodd">
+                            <g fill="#979CA9" fill-rule="nonzero">
+                                <g>
+                                    <path d="M23.145 4.552L18.815.224c-.297-.299-.78-.299-1.064 0-.298.298-.298.78 0 1.064l3.052 3.052H1.153C.74 4.34.4 4.68.4 5.092c0 .411.34.752.752.752h19.636l-3.037 3.052c-.298.298-.298.78 0 1.064.142.142.34.227.54.227.198 0 .383-.07.539-.227l4.343-4.343c.142-.142.227-.34.227-.54-.028-.184-.114-.383-.255-.525z" transform="translate(-1087 -3206) translate(1087 3205.906)"/>
+                                </g>
+                            </g>
+                        </g>
+                    </svg>
+                </div>
+                {% endif %}
+                {% endblock %}
+            </div>
         </div>
 
-        {% block book_navigation %}
-        {% if page.previous and page.previous.path %}
-        <a href="{{ page.previous.path|resolveFile }}{{ page.previous.anchor }}"
-           class="navigation navigation-prev {% if not (page.next and page.next.path) %}navigation-unique{% endif %}"
-           aria-label="Previous page: {{ page.previous.title }}">
-            <i class="fa fa-angle-left"></i>
-        </a>
-        {% endif %}
-        {% if page.next and page.next.path %}
-        <a href="{{ page.next.path|resolveFile }}{{ page.next.anchor }}"
-           class="navigation navigation-next {% if not (page.previous and page.previous.path) %}navigation-unique{% endif %}"
-           aria-label="Next page: {{ page.next.title }}">
-            <i class="fa fa-angle-right"></i>
-        </a>
-        {% endif %}
-        {% endblock %}
         {% endblock %}
     </div>
-    <script>
-        var gitbook = gitbook || [];
-        gitbook.push(function() {
-            gitbook.page.hasChanged({{ template.getJSContext()|dump|safe }})
-        });
-    </script>
+    <!--    <script>-->
+    <!--        var gitbook = gitbook || [];-->
+    <!--        gitbook.push(function() {-->
+    <!--            gitbook.page.hasChanged({{ template.getJSContext()|dump|safe }})-->
+    <!--        });-->
+    <!--    </script>-->
 </div>
 {% endblock %}
