--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -1,4 +1,5 @@
 {% extends template.self %}
+
 {% block body %}
 <div class="book">
     <div class="header-inner">
@@ -33,7 +34,6 @@
             <span>вернуться в аккаунт</span>
         </a>
 
-        {% block search_input %}{% endblock %}
         <div id="book-search-input" role="search">
             <button type="button">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
@@ -68,17 +68,33 @@
 
             <div class="page-wrapper" tabindex="-1" role="main">
                 <div class="page-inner">
-                    {% block search_results %}
-                    <section class="normal markdown-section">
-                        {% block page %}
-                        {{ page.content|safe }}
-                        {% endblock %}
-                    </section>
-                    {% endblock %}
+                    <div id="book-search-results">
+                        <div class="search-noresults">
+                            {{ super() }}
+                            <section class="normal markdown-section">
+                                {% block page %}
+                                {{ page.content|safe }}
+                                {% endblock %}
+                            </section>
+                        </div>
+                        <div class="search-results">
+
+                            <div class="has-results">
+                                {% block search_has_results %}
+                                <h1 class="search-results-title">{{ 'SEARCH_RESULTS_TITLE'|t|safe }}</h1>
+                                <ul class="search-results-list"></ul>
+                                {% endblock %}
+                            </div>
+                            <div class="no-results">
+                                {% block search_no_results %}
+                                <h1 class="search-results-title">{{ 'SEARCH_NO_RESULTS_TITLE'|t|safe }}</h1>
+                                {% endblock %}
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             {% endblock %}
-
 
             <div class="pages-navigation">
                 {% block book_navigation %}
@@ -88,33 +104,40 @@
                         class="navigation navigation-prev {% if not (page.next and page.next.path) %}navigation-unique{% endif %}"
                         aria-label="Previous page: {{ page.previous.title }}">
                     <div class="navigation-topic">пред Тема</div>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="10" viewBox="0 0 24 10">
-                        <g fill="none" fill-rule="evenodd">
-                            <g fill="#979CA9" fill-rule="nonzero">
-                                <g>
-                                    <path d="M23.145 4.552L18.815.224c-.297-.299-.78-.299-1.064 0-.298.298-.298.78 0 1.064l3.052 3.052H1.153C.74 4.34.4 4.68.4 5.092c0 .411.34.752.752.752h19.636l-3.037 3.052c-.298.298-.298.78 0 1.064.142.142.34.227.54.227.198 0 .383-.07.539-.227l4.343-4.343c.142-.142.227-.34.227-.54-.028-.184-.114-.383-.255-.525z" transform="translate(-360 -3206) translate(360 3205.906) matrix(-1 0 0 1 23.8 0)"/>
+
+                        <a href="{{ page.previous.path|resolveFile }}{{ page.previous.anchor }}"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="10" viewBox="0 0 24 10">
+                            <g fill="none" fill-rule="evenodd">
+                                <g fill="#979CA9" fill-rule="nonzero">
+                                    <g>
+                                        <path d="M23.145 4.552L18.815.224c-.297-.299-.78-.299-1.064 0-.298.298-.298.78 0 1.064l3.052 3.052H1.153C.74 4.34.4 4.68.4 5.092c0 .411.34.752.752.752h19.636l-3.037 3.052c-.298.298-.298.78 0 1.064.142.142.34.227.54.227.198 0 .383-.07.539-.227l4.343-4.343c.142-.142.227-.34.227-.54-.028-.184-.114-.383-.255-.525z"
+                                              transform="translate(-360 -3206) translate(360 3205.906) matrix(-1 0 0 1 23.8 0)"/>
+                                    </g>
                                 </g>
                             </g>
-                        </g>
-                    </svg>
-                    <a href="{{ page.previous.path|resolveFile }}{{ page.previous.anchor }}">{{ page.previous.title }}</a>
-                </div>
+                        </svg>
+                            {{ page.previous.title }}</a>
+                    </div>
+
                 {% endif %}
                 {% if page.next and page.next.path %}
 
                 <div class="navigation navigation-next {% if not (page.previous and page.previous.path) %}navigation-unique{% endif %}"
                      aria-label="Next page: {{ page.next.title }}">
                     <div class="navigation-topic">Тема</div>
-                    <a href="{{ page.next.path|resolveFile }}{{ page.next.anchor }}">{{ page.next.title }}</a>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="10" viewBox="0 0 24 10">
-                        <g fill="none" fill-rule="evenodd">
-                            <g fill="#979CA9" fill-rule="nonzero">
-                                <g>
-                                    <path d="M23.145 4.552L18.815.224c-.297-.299-.78-.299-1.064 0-.298.298-.298.78 0 1.064l3.052 3.052H1.153C.74 4.34.4 4.68.4 5.092c0 .411.34.752.752.752h19.636l-3.037 3.052c-.298.298-.298.78 0 1.064.142.142.34.227.54.227.198 0 .383-.07.539-.227l4.343-4.343c.142-.142.227-.34.227-.54-.028-.184-.114-.383-.255-.525z" transform="translate(-1087 -3206) translate(1087 3205.906)"/>
+
+                        <a href="{{ page.next.path|resolveFile }}{{ page.next.anchor }}">{{ page.next.title }}
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="10" viewBox="0 0 24 10">
+                                <g fill="none" fill-rule="evenodd">
+                                    <g fill="#979CA9" fill-rule="nonzero">
+                                        <g>
+                                            <path d="M23.145 4.552L18.815.224c-.297-.299-.78-.299-1.064 0-.298.298-.298.78 0 1.064l3.052 3.052H1.153C.74 4.34.4 4.68.4 5.092c0 .411.34.752.752.752h19.636l-3.037 3.052c-.298.298-.298.78 0 1.064.142.142.34.227.54.227.198 0 .383-.07.539-.227l4.343-4.343c.142-.142.227-.34.227-.54-.028-.184-.114-.383-.255-.525z"
+                                                  transform="translate(-1087 -3206) translate(1087 3205.906)"/>
+                                        </g>
+                                    </g>
                                 </g>
-                            </g>
-                        </g>
-                    </svg>
+                            </svg>
+                        </a>
+
                 </div>
                 {% endif %}
                 {% endblock %}
@@ -123,11 +146,11 @@
 
         {% endblock %}
     </div>
-    <!--    <script>-->
-    <!--        var gitbook = gitbook || [];-->
-    <!--        gitbook.push(function() {-->
-    <!--            gitbook.page.hasChanged({{ template.getJSContext()|dump|safe }})-->
-    <!--        });-->
-    <!--    </script>-->
+    <script>
+        var gitbook = gitbook || [];
+        gitbook.push(function() {
+            gitbook.page.hasChanged({{ template.getJSContext()|dump|safe }});
+        });
+    </script>
 </div>
 {% endblock %}
