--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -5,7 +5,7 @@
     <div class="header-inner">
         <!-- LOGO -->
         <div class="logo">
-            <a href="https://br-analytics.ru" target="_blank">
+            <a href="/">
                 <img src="https://br-analytics.ru/app/ba_front/img/ba_outer/logos/logo-dark_bg.svg" alt="logo">
             </a>
         </div>
@@ -91,19 +91,14 @@
                                 {% endblock %}
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-            {% endblock %}
+                    </div><div class="pages-navigation">
+                    {% block book_navigation %}
+                    {% if page.previous and page.previous.path %}
 
-            <div class="pages-navigation">
-                {% block book_navigation %}
-                {% if page.previous and page.previous.path %}
-
-                <div
-                        class="navigation navigation-prev {% if not (page.next and page.next.path) %}navigation-unique{% endif %}"
-                        aria-label="Previous page: {{ page.previous.title }}">
-                    <div class="navigation-topic">пред Тема</div>
+                    <div
+                            class="navigation navigation-prev {% if not (page.next and page.next.path) %}navigation-unique{% endif %}"
+                            aria-label="Previous page: {{ page.previous.title }}">
+                        <div class="navigation-topic">{{ summary.parts[0].title }}</div>
 
                         <a href="{{ page.previous.path|resolveFile }}{{ page.previous.anchor }}"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="10" viewBox="0 0 24 10">
                             <g fill="none" fill-rule="evenodd">
@@ -118,12 +113,12 @@
                             {{ page.previous.title }}</a>
                     </div>
 
-                {% endif %}
-                {% if page.next and page.next.path %}
+                    {% endif %}
+                    {% if page.next and page.next.path %}
 
-                <div class="navigation navigation-next {% if not (page.previous and page.previous.path) %}navigation-unique{% endif %}"
-                     aria-label="Next page: {{ page.next.title }}">
-                    <div class="navigation-topic">Тема</div>
+                    <div class="navigation navigation-next {% if not (page.previous and page.previous.path) %}navigation-unique{% endif %}"
+                         aria-label="Next page: {{ page.next.title }}">
+                        <div class="navigation-topic">Тема</div>
 
                         <a href="{{ page.next.path|resolveFile }}{{ page.next.anchor }}">{{ page.next.title }}
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="10" viewBox="0 0 24 10">
@@ -138,10 +133,16 @@
                             </svg>
                         </a>
 
+                    </div>
+                    {% endif %}
+                    {% endblock %}
                 </div>
-                {% endif %}
-                {% endblock %}
+                </div>
+
             </div>
+            {% endblock %}
+
+
         </div>
 
         {% endblock %}
