--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -93,47 +93,48 @@
                         </div>
                     </div><div class="pages-navigation">
                     {% block book_navigation %}
-                    {% if page.previous and page.previous.path %}
+                    {% if page.level != 1.1 %}
+                        {% if page.previous and page.previous.path %}
+                            {% if page.previous.level !== '1.1' %}
+                            <div
+                                    class="navigation navigation-prev {% if not (page.next and page.next.path) %}navigation-unique{% endif %}"
+                                    aria-label="Previous page: {{ page.previous.title }}">
+                                <div class="navigation-topic">{{ summary.parts[page.previous.level | first | int -1].title | capitalize }}</div>
 
-                    <div
-                            class="navigation navigation-prev {% if not (page.next and page.next.path) %}navigation-unique{% endif %}"
-                            aria-label="Previous page: {{ page.previous.title }}">
-                        <div class="navigation-topic">{{ summary.parts[0].title }}</div>
-
-                        <a href="{{ page.previous.path|resolveFile }}{{ page.previous.anchor }}"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="10" viewBox="0 0 24 10">
-                            <g fill="none" fill-rule="evenodd">
-                                <g fill="#979CA9" fill-rule="nonzero">
-                                    <g>
-                                        <path d="M23.145 4.552L18.815.224c-.297-.299-.78-.299-1.064 0-.298.298-.298.78 0 1.064l3.052 3.052H1.153C.74 4.34.4 4.68.4 5.092c0 .411.34.752.752.752h19.636l-3.037 3.052c-.298.298-.298.78 0 1.064.142.142.34.227.54.227.198 0 .383-.07.539-.227l4.343-4.343c.142-.142.227-.34.227-.54-.028-.184-.114-.383-.255-.525z"
-                                              transform="translate(-360 -3206) translate(360 3205.906) matrix(-1 0 0 1 23.8 0)"/>
-                                    </g>
-                                </g>
-                            </g>
-                        </svg>
-                            {{ page.previous.title }}</a>
-                    </div>
-
-                    {% endif %}
-                    {% if page.next and page.next.path %}
-
-                    <div class="navigation navigation-next {% if not (page.previous and page.previous.path) %}navigation-unique{% endif %}"
-                         aria-label="Next page: {{ page.next.title }}">
-                        <div class="navigation-topic">Тема</div>
-
-                        <a href="{{ page.next.path|resolveFile }}{{ page.next.anchor }}">{{ page.next.title }}
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="10" viewBox="0 0 24 10">
-                                <g fill="none" fill-rule="evenodd">
-                                    <g fill="#979CA9" fill-rule="nonzero">
-                                        <g>
-                                            <path d="M23.145 4.552L18.815.224c-.297-.299-.78-.299-1.064 0-.298.298-.298.78 0 1.064l3.052 3.052H1.153C.74 4.34.4 4.68.4 5.092c0 .411.34.752.752.752h19.636l-3.037 3.052c-.298.298-.298.78 0 1.064.142.142.34.227.54.227.198 0 .383-.07.539-.227l4.343-4.343c.142-.142.227-.34.227-.54-.028-.184-.114-.383-.255-.525z"
-                                                  transform="translate(-1087 -3206) translate(1087 3205.906)"/>
+                                <a href="{{ page.previous.path|resolveFile }}{{ page.previous.anchor }}"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="10" viewBox="0 0 24 10">
+                                    <g fill="none" fill-rule="evenodd">
+                                        <g fill="#979CA9" fill-rule="nonzero">
+                                            <g>
+                                                <path d="M23.145 4.552L18.815.224c-.297-.299-.78-.299-1.064 0-.298.298-.298.78 0 1.064l3.052 3.052H1.153C.74 4.34.4 4.68.4 5.092c0 .411.34.752.752.752h19.636l-3.037 3.052c-.298.298-.298.78 0 1.064.142.142.34.227.54.227.198 0 .383-.07.539-.227l4.343-4.343c.142-.142.227-.34.227-.54-.028-.184-.114-.383-.255-.525z"
+                                                      transform="translate(-360 -3206) translate(360 3205.906) matrix(-1 0 0 1 23.8 0)"/>
+                                            </g>
                                         </g>
                                     </g>
-                                </g>
-                            </svg>
-                        </a>
+                                </svg>
+                                    {{ page.previous.title }}</a>
+                            </div>
+                            {% endif %}
+                        {% endif %}
+                        {% if page.next and page.next.path %}
+                        <div class="navigation navigation-next {% if not (page.previous and page.previous.path) or page.previous.level == 1.1 %}navigation-unique{% endif %} {% if (page.previous and page.previous.level == 1.1) %}navigation-unique{% endif %}"
+                             aria-label="Next page: {{ page.next.title }}">
+                            <div class="navigation-topic">{{ summary.parts[page.next.level | first | int - 1].title | capitalize }}</div>
 
-                    </div>
+                            <a href="{{ page.next.path|resolveFile }}{{ page.next.anchor }}">{{ page.next.title }}
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="10" viewBox="0 0 24 10">
+                                    <g fill="none" fill-rule="evenodd">
+                                        <g fill="#979CA9" fill-rule="nonzero">
+                                            <g>
+                                                <path d="M23.145 4.552L18.815.224c-.297-.299-.78-.299-1.064 0-.298.298-.298.78 0 1.064l3.052 3.052H1.153C.74 4.34.4 4.68.4 5.092c0 .411.34.752.752.752h19.636l-3.037 3.052c-.298.298-.298.78 0 1.064.142.142.34.227.54.227.198 0 .383-.07.539-.227l4.343-4.343c.142-.142.227-.34.227-.54-.028-.184-.114-.383-.255-.525z"
+                                                      transform="translate(-1087 -3206) translate(1087 3205.906)"/>
+                                            </g>
+                                        </g>
+                                    </g>
+                                </svg>
+                            </a>
+
+                        </div>
+                        {% endif %}
                     {% endif %}
                     {% endblock %}
                 </div>
