add search plus plugin

--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -65,6 +65,7 @@
         {% block book_body %}
         <div class="body-inner">
             {% block book_inner %}
+            {% include "website/header.html" %}
 
             <div class="page-wrapper" tabindex="-1" role="main">
                 <div class="page-inner">
